--- a/src/server/index.html
+++ b/src/server/index.html
@@ -2,9 +2,9 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Webpack ES6 Boilerplate</title>
+    <title>Server</title>
   </head>
   <body>
-    <div class="hello" id="root"></div>
+    <h1>Hello, im a server!</h1>
   </body>
 </html>
